# autopilot_lab

./: .gitignore  AGENTLOG.md  MAINLINE_READINESS_NEXT_PHASE_BRIEF.md  PHASE1_ATTITUDE_REPRO.md  PHASE1_MANUAL_REPRO.md  PHASE3_ANALYSIS_REPRO.md  PJINFO.md  README.md  TODO.md  intro.md  lab.lock.json  milestone.lock.json
docs/: A2_PAIR_TARGET_ALGORITHM_SPEC.md  A2_PAIR_TARGET_CAMPAIGN_PLAN.md  A2_PAIR_TARGET_EVALUATION_PROTOCOL.md  A2_PAIR_TARGET_LIVE_PROTOCOL_V1.md  DATA_SCHEMA.md  EXPERIMENT_PROTOCOL.md  FORMAL_V2_INSIGHT_PHASE_MEMO.md  M1_STATUS.md  MAINLINE_READINESS_NEXT_PHASE_BRIEF.md  MILESTONE_LINEAR_F_APPENDIX.md  MILESTONE_LINEAR_F_REPORT.md  NEXT_PHASE_DECISION_LAYER.md  PHASE1_ATTITUDE_REPRO.md  PHASE1_MANUAL_REPRO.md  PHASE2_REPRO.md  PHASE3_ANALYSIS_REPRO.md  RESEARCH_GOAL.md  STAGE_REPORT_2026-04-07.md  STAGE_REPORT_2026-04-08.md  XY_SCHEMA_GUIDE.md  intro.md  summary-0408.md  summary-0409.md
reference/: ISSTA2025_RouthSearch_对比评估报告.md  阶段工作总结与下一步研究计划.md
scripts/: analyze_anchor_deep_dive.py  analyze_formal_v2_in_depth.py  (+50 more)
src/linearity_study/: package.xml  setup.cfg  setup.py
src/linearity_study/linearity_study/: __init__.py  linearity_run_study.py
src/linearity_study/resource/: linearity_study
src/px4_ros2_backend/: package.xml  setup.cfg  setup.py
src/px4_ros2_backend/px4_ros2_backend/: __init__.py  ab_fit_runner.py  ab_uncertainty_runner.py  analysis_runner.py  artifacts.py  attitude_injector.py  common.py  experiment_runner.py  gz_clock_bridge.py  identification_dataset_builder.py  linearity_capture.py  linearity_matrix.py  manual_input_injector.py  matrix_runner.py  metrics.py  profiles.py  rate_injector.py  telemetry_recorder.py  ulog_backfill.py  ulog_metrics.py
src/px4_ros2_backend/resource/: px4_ros2_backend
(+12131 files in other folders)
