<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>linearity_study</name>
  <version>0.1.0</version>
  <description>Study orchestration CLIs for autopilot_lab global linearity studies.</description>
  <maintainer email="1245080419@qq.com">car</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>linearity_core</exec_depend>
  <exec_depend>linearity_analysis</exec_depend>
  <exec_depend>px4_ros2_backend</exec_depend>
  <exec_depend>ardupilot_mavlink_backend</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
