<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_ros2_backend</name>
  <version>0.1.0</version>
  <description>PX4 ROS 2 backend package for autopilot_lab.</description>
  <maintainer email="1245080419@qq.com">car</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>linearity_core</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
